--- a/www/index.html
+++ b/www/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <title>Geolite Nano</title>
     <base target="_self">
-    <meta name="description" content="aplikasi remote control untuk mengendalikan saklar/relay yang terhubung pada GPIO di perangkat berbasis OpenWRT - made by @gojigeje">
+    <meta name="description" content="aplikasi remote control untuk mengendalikan saklar/relay yang terhubung pada GPIO di perangkat berbasis OpenWRT">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/>
     <meta name="google" value="notranslate">
     <meta http-equiv="Content-Security-Policy" content="default-src *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval'">
